# urifilesystem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflow/: unit_tests.yml
tests/: test_urifilesystem.py
urifilesystem/: urifilesystem.py
