[tool.poetry]
name = "urifilesystem"
version = "0.1.0"
description = "A python library that wraps fsspec like implementaions to create a single interface for all supported URIs"
authors = ["Jeffrey Werbin <jwerbin@users.noreply.github.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.7"
fsspec = "^2022.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pdoc = "^10.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
